<resources>
    <string name="app_name">leave_application_system</string>
    <string name="choose_date">選擇請假的日期</string>
    <string name="next">next</string>
    <string name="propose_hint">選擇課程</string>
    <string name="no_class">您在當天並沒有課程</string>
    <string name="class_name">課程名稱</string>
    <string name="class_time">課程時間</string>
    <string name="choose">請假</string>
    <string name="reason">原因</string>
    <string name="reason_of_leaving">請假原因</string>
    <string name="propose">送出</string>
    <string name="unused_button">沒用的按鈕</string>
    <string name="ask_for_leaving">請假</string>
    <string name="leaving_status">我要看請假</string>
    <string name="my_schedule">我的課表</string>
    <string name="leave_application">請假申請</string>
    <string name="student_name">學生姓名</string>
    <string name="student_username">學生用戶名</string>
    <string name="classname">課程名稱</string>
    <string name="time">請假時間</string>
    <string name="check">審核</string>
    <string name="no_request">沒有請假申請</string>
    <string name="agree_or_no">是否准假</string>
    <string name="agree">准假</string>
    <string name="no">駁回</string>
    <string name="yes">確認</string>
    <string name="personal_class_schedule">個人課表</string>
    <string name="important_event">行事曆</string>
    <string name="announcement">公告</string>
    <string name="changedate">修改日期</string>
    <string name="select">選擇</string>
    <string name="name_hint">Name</string>
    <string name="password">password</string>
    <string name="login">登入</string>
    <string name="tmp">暫時的，之後換上歡迎圖片</string>
    <string name="personal_profile">個人資料</string>
    <string name="action_settings">Settings</string>
    <string name="back_to_main">返回主畫面</string>
    <string name="go_to_schedule">前往課表</string>
    <string name="manual_roll_call">手動點名</string>
    <string name="sunday">週日</string>
    <string name="monday">週一</string>
    <string name="tuesday">週二</string>
    <string name="wednesday">週三</string>
    <string name="thursday">週四</string>
    <string name="friday">週五</string>
    <string name="saturday">週六</string>
    <string name="start_date">開始日期</string>
    <string name="end_date">結束日期</string>
    <string name="topic">標題</string>
    <string name="set_tag">設定標籤</string>
    <string name="create_new_tag">新增標籤</string>
    <string name="tag_name">標籤名稱</string>
</resources>
