<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/calendar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0.5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="0.5dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/sunday"
            android:textColor="#FF0000" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="0.5dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/monday" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="0.5dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/tuesday" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="0.5dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/wednesday" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="0.5dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/thursday" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="0.5dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/friday" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="0.5dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/saturday"
            android:textColor="#0000FF" />
    </LinearLayout>


</LinearLayout>