<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="10">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="3"/>
    <com.viewpagerindicator.CirclePageIndicator
        android:id="@+id/CirclePageindicator"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="10dip"
        android:background="#882244"
        app:radius="7dp"
        app:fillColor="#FFCC00"
        app:pageColor="#FF8800"
        app:strokeColor="#882244"
        app:strokeWidth="1dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:orientation="vertical">

            <EditText
                android:id="@+id/UserInputId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name_hint"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/UserInputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/googleSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true" />

        </LinearLayout>

        <Button
            android:id="@+id/LoginButton"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:text="@string/login" />
    </LinearLayout>

</LinearLayout>